// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`int16 schema test invalid values: -32769 1`] = `
"expect(received).toMatchSchema(schema)

received
  must be >= -32768
    Path:     dataTypes/int16.schema.json#/minimum
"
`;

exports[`int16 schema test invalid values: 1.5 1`] = `
"expect(received).toMatchSchema(schema)

received
  must be integer
    Path:     dataTypes/int16.schema.json#/type
"
`;

exports[`int16 schema test invalid values: 32768 1`] = `
"expect(received).toMatchSchema(schema)

received
  must be <= 32767
    Path:     dataTypes/int16.schema.json#/maximum
"
`;
